--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,12 +15,18 @@
     <div class="container">
         <h1 class="text-center">TODO LIST</h1>
       <a href="/newtask">  <button>insert task</button></a>
+      <a href="/"><button >All</button></a>
+          <a href="/getDone">
+          <button >Done</button></a>
+          <a href="/getToDo">
+          <button >To Do</button></a>
+          <input id="tb" type="text" onkeypress="handle(event)">
         <%for(i in data){%>
             <div class="p-3 border border-primary bg-info bg-gradient my-2
         ">
                 <%=data[i].T_Name%>
                     <div class="float-end">
-                        <button type="button" class="btn btn-dark">Done</button>
+                        <a href="/update/<%=data[i].T_id%>"><button type="button" class="btn <%if (data[i].Status=="Done") {%>  btn-dark  <%}else{%> btn-primary <%}%>"><%=data[i].Status%></button></a>
                         <a href="/delete/<%=data[i].T_id%>"><button type="button" class="btn btn-dark">Delete</button></a>
                     </div>
             </div>
@@ -31,6 +37,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script>
+            
+             function handle(e)
+                {
+                    if(e.keyCode === 13){
+                        var id=document.getElementById("tb").value;
+                        console.log(id)
+                        window.location.href="/search/"+id;
+                    }
+                }
+        </script>
 </body>
 
 </html>
